syntax = "proto3";
import "google/protobuf/any.proto";
package categoryPackage;

message CreateCategory {
    string name = 1;
    string value = 2;
    string parent = 3;
}

message Category {
    string name = 1;
    string value = 2;
    string parent = 3;
    string _id = 4;
}

service CategoryService {
    rpc createCategory (CreateCategory) returns (Category);
}
